# ftl

./: Cargo.toml  Makefile  README.md  bacon.toml  flake.nix  memory.x
.cargo/: config.toml
src/: config.rs  ftl.rs  lib.rs  main.rs
src/bad_block_table/: table.rs
src/core/: address.rs
src/gc/: gc.rs
src/logical_physical_address/: mapper.rs
src/media_manager/: media_manager.rs  mod.rs  operations.rs  stub.rs
src/page_provisioner/: provisioner.rs
src/provisioner/: provisioner.rs
src/utils/: mod.rs  print.rs  ring_buffer.rs
tests/: main.rs  test.rs
tests/bad_block_table/: table.rs
tests/unit/: bbt.rs  ftl.rs  mapper.rs  mod.rs  provisioner.rs  ring_buffer.rs
tests/utils/: ring_buffer.rs
