[package]
name = "ssd_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
riscv = "0.13.0"
riscv-rt = "0.14.0"
semihosting = { version = "0.1.19", features = ["panic-handler", "stdio"] }
rv_unit = { git = "https://github.com/rust-for-ssd/rv_unit.git" }

[profile.small_release]
inherits = "release"
opt-level = "s"

[lib]
name = "ssd_rs"
# crate-type = ["lib", "staticlib"]
test = false
harness = false
